:art: 新增swagger文件使用3種route
