# app/Http/Controllers/AuthorizationController.php
@@ -16,65 +16,70 @@ use Illuminate\Support\Facades\Http;
 class AuthorizationController
 {
     /**
-     * @SWG\Get(
+     * @OA\Get(
      *     path="/authorizationCode",
-     *     summary="取得authorizationCode",
      *     tags={"AuthorizationCode"},
-     *     produces={"text/html,application/xhtml+xml,application/xml;"},
-     *     security={
-     *          {"Bearer":{}}
-     *     },
-     *     @SWG\Parameter(
+     *     @OA\Parameter(
      *          name="client_id",
      *          in="query",
      *          description="client端ID",
      *          required=true,
-     *          type="string",
+     *          @OA\Schema(
+     *              type="string"
+     *          )
      *     ),
-     *     @SWG\Parameter(
+     *     @OA\Parameter(
      *          name="redirect_uri",
      *          in="query",
      *          description="導頁的Uri",
      *          required=true,
-     *          type="string",
+     *          @OA\Schema(
+     *              type="string"
+     *          )
      *     ),
-     *     @SWG\Parameter(
+     *     @OA\Parameter(
      *          name="response_type",
      *          in="query",
      *          description="授權類型",
      *          required=true,
-     *          type="string",
+     *          @OA\Schema(
+     *              type="string"
+     *          )
      *     ),
-     *     @SWG\Parameter(
+     *     @OA\Parameter(
      *          name="scope",
      *          in="query",
      *          description="存取資料範圍",
-     *          type="string",
+     *          @OA\Schema(
+     *              type="string"
+     *          )
      *     ),
-     *     @SWG\Parameter(
+     *     @OA\Parameter(
      *          name="state",
      *          in="query",
      *          description="授權編碼",
      *          required=true,
-     *          type="string",
+     *          @OA\Schema(
+     *              type="string"
+     *          )
      *     ),
-     *     @SWG\Response(
+     *     @OA\Response(
      *          response="200",
      *          description="Successful creation"
      *     ),
-     *     @SWG\Response(
+     *     @OA\Response(
      *        response=401,
      *        description="Unauthenticated"
      *     ),
-     *     @SWG\Response(
+     *     @OA\Response(
      *        response=400,
      *        description="Bad Request"
      *     ),
-     *     @SWG\Response(
+     *     @OA\Response(
      *        response=404,
      *        description="not found"
      *     ),
-     *     @SWG\Response(
+     *     @OA\Response(
      *        response=403,
      *        description="Forbidden"
      *     )
